# SecureNet

./: .env.example  .env.production.example  .env.template  .gitignore  API_KEYS_SETUP.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.frontend  README.md  WEB_DEPLOYMENT_GUIDE.md  deployment-scripts.json  direct-api-test.html  docker-compose.env  docker-compose.prod.yml  docker-compose.yml  generate_secrets.py  package-lock.json  package.json  pyproject.toml  setup_apis.ps1  setup_apis.py  tailwind.config.ts  test-frontend-api.html  test_dashboard_fixes.js  test_system_metrics.js  test_system_status_component.js  vite.config.ts
attached_assets/: Pasted-Build-me-a-comprehensive-cybersecurity-dashboard-application-called-SecureNet-with-the-following-s-1748110673418.txt  Pasted-Create-a-comprehensive-Flask-backend-for-the-SecureNet-cybersecurity-dashboard-with-the-following-sp-1748111941677.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
flask_backend/: .env.template  Dockerfile  README_ENHANCED.md  app.py  config.py  demo.py  enhanced_app.py  init_database.py  requirements.txt  simple_app.py  simple_test.py  test_api_integration.py  test_api_keys.py  test_endpoints.py  test_monitor.py  test_real_monitor.py  websocket_app.py
flask_backend/models/: models.py
nginx/: proxy_params  securenet-locations.conf  securenet.conf
scripts/: check-deployment.js  deploy-quick.js  deploy.sh  init_production_database.py  seed_database.ts  seed_network_traffic.ts  seed_security_events.ts
server/: auth.ts  routes.ts  storage.ts
shared/: schema.ts
(+72 files in other folders)
